--- a/_posts/2018-12-10-gls.md
+++ b/_posts/2018-12-10-gls.md
@@ -2,6 +2,7 @@
 title: Gaussian Label Smoothing
 author: Haytham ElFadeel
 date: 2018-12-10 18:32:00 -0800
+des: The generalization of neural networks can often be improved by using label smoothing which is soft targets that are a weighted average of the hard targets and the uniform distribution over labels. We introduce a new variation of label smoothing that improve the performance of sequence-based models such as BERT, ELMo
 
 ---
 
