--- a/_posts/2019-02-10-ai.md
+++ b/_posts/2019-02-10-ai.md
@@ -2,7 +2,7 @@
 title: How academic division of AI, limits AI progress
 author: Haytham ElFadeel
 date: 2019-02-10 18:32:00 -0800
-
+des: One of the fundamental problems in the current AI approaches is that it typically throws out much of the structure of the world before they start.
 ---
 
 
