--- a/_posts/2020-10-1-road1.md
+++ b/_posts/2020-10-1-road1.md
@@ -2,7 +2,7 @@
 title: ROaD-Electra Robustly Optimized and Distilled Electra 1
 author: Haytham ElFadeel
 date: 2020-10-10 18:32:00 -0800
-
+des: Exploring Multi-Task pre-training and a new variance of Knowledge Distillation to build new state-of-the-art Transformer models for MRC, NLI and NLU.
 ---
 <sup>Build state-of-the-art Transformer models for QnA, NLI and NLU.</sup>
 
