--- a/_posts/2020-12-1-road2.md
+++ b/_posts/2020-12-1-road2.md
@@ -2,9 +2,10 @@
 title: ROaD-Electra Robustly Optimized and Distilled Electra 2
 author: Haytham ElFadeel
 date: 2020-12-25 18:32:00 -0800
+des: Building the best Base sized Transformer model for MRC, NLI and NLU.
 
 ---
-<sup>Building the best Base sized Transformer model.</sup>
+
 
 
 ## **TL;DR**
