--- a/_posts/2021-03-1-kd1.md
+++ b/_posts/2021-03-1-kd1.md
@@ -1,10 +1,9 @@
 ---
-title: Knowledge Distillation Part 1 - Large to Large - Can student exceed the teacher
+title: Knowledge Distillation Part 1
 author: Haytham ElFadeel
 date: 2021-03-03 18:32:00 -0800
-
+des: Part 1 - Large to Large  Can student exceed the teacher
 ---
-<sup>Part 1 - Large to Large : Can student exceed the teacher</sup>
 
 
 ## **1. Introduction**
