--- a/_posts/2021-06-1-dc.md
+++ b/_posts/2021-06-1-dc.md
@@ -2,9 +2,8 @@
 title: Decoupled Transformer
 author: Haytham ElFadeel
 date: 2021-06-01 18:32:00 -0800
-
+des: How much Attention is really needed?
 ---
-<sup>How much Attention is really needed?</sup>
 
 
 ## **1. Introduction**
